# txt2tmpl

./: CMakeLists.txt  README.md  default.xcf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.rc  mainwindow.ui  maketemplates.files
